# music-downloader

./: Cargo.toml  README.md
src/: adaptive.rs  cli.rs  csv.rs  download.rs  error.rs  main.rs  progress.rs  types.rs  ui.rs
src/services/: mod.rs  tidal.rs
